fixed issues with the features section mobile view

--- a/style.css
+++ b/style.css
@@ -85,23 +85,23 @@ button {
  https://www.tutorialspoint.com/how-to-affect-other-elements-when-one-element-is-hovered-in-html#:~:text=To%20affect%20other%20elements%20when%20one%20element%20is%20hovered%2C%20an,hover%20affect%20is%20then%20visible. */
 .funHover:hover .frame {
     background-color: hsl(var(--fun), 60%, 90%);
-    text-decoration: underline;
+    /* text-decoration: underline; */
     cursor: pointer;
-    outline: hsl(var(--fun), 40%, 60%) solid 10px;
+    outline: hsl(var(--fun), 60%, 60%) solid 10px;
 
 }
 
 .funHover:hover .workH {
-    color: hsl(var(--fun), 80%, 50%);
+    /* color: hsl(var(--fun), 80%, 50%); */
     /* mix-blend-mode: hard-light; */
     /* text-shadow: -2px 0px 0px var(--magenta); */
-    text-shadow: -1px 1px 0px #000,
-        1px 1px 0px #000,
-        1px -1px 0 #000,
-        -1px -1px 0 #000;
+    text-shadow: -1px 1px 0px hsl(var(--fun), 80%, 80%),
+        1px 1px 0px hsl(var(--fun), 80%, 80%),
+        1px -1px 0 hsl(var(--fun), 80%, 80%),
+        -1px -1px 0 hsl(var(--fun), 80%, 80%);
     /* text outline with text shadow https://www.educative.io/answers/how-to-create-a-text-outline-using-css */
-    /* font-size: 2em; */
-    transition: all .5s ease;
+    font-size: 1.8em;
+    transition: all .2s ease;
 
 }
 
@@ -129,7 +129,7 @@ button .frame:hover {
 }
 
 .mobile {
-    display: none;
+    display: none !important;
 }
 
 /* ends of general styling */
@@ -146,8 +146,13 @@ button .frame:hover {
 }
 
 .hero-text {
-    grid-column: 2/12;
+    grid-column: span 13;
     /* background-color: #B55AB7; */
+}
+
+.scroll {
+    grid-row: 2;
+    grid-column: 12;
 }
 
 /* end of hero section */
@@ -172,9 +177,7 @@ button .frame:hover {
 .work-cell {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 2em;
-    align-items: center;
-
+    /* gap: 2em; */
 }
 
 .frame {
@@ -183,8 +186,6 @@ button .frame:hover {
     filter: drop-shadow(0px 0px 60px hsl(var(--fun), 40%, 30%));
     display: flex;
     flex-wrap: wrap;
-    /* width: 630px; */
-    /* height: 500px; */
 
 }
 
@@ -217,12 +218,9 @@ button .frame:hover {
 }
 
 .work-cell .text {
-    align-content: center;
-    display: grid;
-    padding: 1em;
     text-align: left;
+    margin: auto 2em;
     font-size: 1.25em;
-    /* margin-bottom: 2em; */
 }
 
 /* end of featured work section */
@@ -232,20 +230,42 @@ button .frame:hover {
 /* Media query for small screens */
 @media (max-width: 768px) {
     .mobile {
-        display: block;
+        display: block !important;
     }
 
     .desktop {
-        display: none;
+        display: none !important;
+    }
+
+    h2 {
+        margin: 0.5em 0;
+    }
+
+    h1.special {
+        font-size: 7em;
     }
 
     .work-cell {
         display: block;
     }
 
+    .work-cell .text {
+        margin: 1em;
+    }
+
+    .work-grid {
+        row-gap: 5%;
+    }
+
     .img-container {
         margin: auto;
         padding: 10px;
+    }
+
+    .frame {
+        background-color: transparent;
+        outline: none;
+        filter: drop-shadow(0px 0px 60px hsl(var(--fun), 40%, 30%));
     }
 
     .frame img {
